--- a/www/index.html
+++ b/www/index.html
@@ -32,8 +32,16 @@
             async defer>
     </script>
     <script src="js/app.js"></script>
-    <script src="js/controllers.js"></script>
-    <script src="js/services.js"></script>
+
+    <script src="js/controllers/account.js"></script>
+    <script src="js/controllers/chatDetail.js"></script>
+    <script src="js/controllers/chats.js"></script>
+    <script src="js/controllers/dash.js"></script>
+    <script src="js/controllers/login.js"></script>
+
+    <script src="js/services/chats.js"></script>
+    <script src="js/services/posts.js"></script>
+
     <script src="js/geolocation.js"></script>
   </head>
   <body ng-app="starter">
