--- a/www/index.html
+++ b/www/index.html
@@ -8,6 +8,8 @@
     <link href="lib/ionic/css/ionic.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
 
+    <link href='https://fonts.googleapis.com/css?family=Ramaraja' rel='stylesheet' type='text/css'>
+
     <!-- IF using Sass (run gulp sass first), then uncomment below and remove the CSS includes above
     <link href="css/ionic.app.css" rel="stylesheet">
     -->
@@ -28,7 +30,7 @@
     <script src="https://cdn.firebase.com/libs/angularfire/1.1.3/angularfire.min.js"></script>
 
     <!-- your app's js -->
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBMcUJRucbX9Ngluj5hgnygSPvApHnfhwU&signed_in=true&callback=initMap"
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCOp5QUI7npL6kZupRdmQ7xmz4CSYZeUF0&signed_in=true&callback=initMap"
             async defer>
     </script>
     <script src="js/app.js"></script>
@@ -38,12 +40,14 @@
     <script src="js/controllers/chats.js"></script>
     <script src="js/controllers/dash.js"></script>
     <script src="js/controllers/login.js"></script>
+    <script src="js/controllers/location.js"></script>
 
     <script src="js/services/chats.js"></script>
     <script src="js/services/posts.js"></script>
     <script src="js/services/auth.js"></script>
 
     <script src="js/geolocation.js"></script>
+
   </head>
   <body ng-app="starter">
 
